<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                />

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context=".MainActivity"
            tools:showIn="@layout/activity_main">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingVertical="@dimen/medium_margin">

            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/b_choose_image"
                    android:background="@drawable/rounded_button"
                    android:layout_marginHorizontal="@dimen/small_margin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_choose_image"
                    app:layout_constraintEnd_toStartOf="@id/b_capture_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/b_capture_image"
                    android:background="@drawable/rounded_button"
                    android:layout_marginHorizontal="@dimen/small_margin"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/action_capture_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/b_choose_image"
                    app:layout_constraintTop_toTopOf="parent" />
            <!--Choose Ins-->
            <include
                    android:id="@+id/i_choose_image"
                    layout="@layout/choose_image_inc"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    app:layout_constraintBottom_toBottomOf="@id/iv_input"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/iv_input" />


            <ImageView
                    android:id="@+id/iv_input"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:visibility="invisible"
                    android:layout_marginVertical="@dimen/small_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/b_choose_image"
                    tools:ignore="ContentDescription" />

            <TextView
                    android:id="@+id/tv_input_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="@dimen/small_margin"
                    app:layout_constraintEnd_toEndOf="@id/iv_input"
                    app:layout_constraintStart_toStartOf="@id/iv_input"
                    app:layout_constraintTop_toBottomOf="@id/iv_input"
                    tools:text="@string/detail_tool_text"/>

            <Button
                    android:id="@+id/b_process"
                    android:background="@drawable/rounded_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/medium_margin"
                    android:text="@string/action_remove_bg"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@id/tv_input_details"
                    app:layout_constraintStart_toStartOf="@id/tv_input_details"
                    app:layout_constraintTop_toBottomOf="@id/tv_input_details" />

            <TextView
                    android:id="@+id/tv_progress"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@id/b_process"
                    app:layout_constraintStart_toStartOf="@id/b_process"
                    app:layout_constraintTop_toBottomOf="@id/b_process"
                    tools:text="@string/status_compressing" />

            <ProgressBar
                    android:id="@+id/pb_progress"
                    style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="@id/tv_progress"
                    app:layout_constraintStart_toStartOf="@id/tv_progress"
                    app:layout_constraintTop_toBottomOf="@id/tv_progress" />
            <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_instruction"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    android:background="@drawable/blank_view_border"
                    android:text="@string/instruction"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@id/pb_progress"
                    app:layout_constraintStart_toStartOf="@id/pb_progress"
                    app:layout_constraintTop_toBottomOf="@id/pb_progress" />

            <ImageView
                    android:id="@+id/iv_output"
                    android:layout_width="0dp"
                    android:layout_height="300dp"
                    app:layout_constraintEnd_toEndOf="@id/pb_progress"
                    app:layout_constraintStart_toStartOf="@id/pb_progress"
                    app:layout_constraintTop_toBottomOf="@id/pb_progress"
                    tools:ignore="ContentDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>